# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  05 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage_dep.py:
  What can I say, I can't get enough of bug (#59574).
  I'm operating under the assumption there still is a bug in the 
  use_reduce logic, soo I've left a fairly massive amount of debugging 
  code in place that's currently disabled.  It's *very* useful for 
  tracking exactly what/how use_reduce decides on a operator node.

  05 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
  I introduced a bug in the previous commit, basically 
  portage.settings.archlist list of arch keywords was being actively 
  pruned by repoman as it stepped through arches for dep checking.
  Basically, needed to make a copy of archlist rather then using the 
  actual archlist object.  Should be the final issue for (#59574).

  05 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Fix 
  in the same area, if use="all" (repoman wants -every use flag- checked),
  it should call use_reduce w/ matchall set appropriately. (#59574)

  05 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: And...
  repoman's arch check got hosed again.  The code in dep_check for 
  building a masklist was incorrect, 3 line fix. (#59574)

*portage-2.0.51_pre17 (03 Aug 2004): Fixes and Public Readiness

  03 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_dep.py: Again
	fixed the || exceptions to understand nested legal || statements.

*portage-2.0.51_pre16 (03 Aug 2004): Fixes and Public Readiness

  04 Aug 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Changed the
  virtual/glibc references to virtual/libc.
